--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,18 +1,18 @@
 ---
-title: "Vibe Kanban Documentation"
+title: "Task Copilot Documentation"
 description: "Orchestrate AI coding agents with confidence. Plan, review, and manage AI-generated code in isolated git worktrees with complete control."
 sidebarTitle: "Home"
 ---
 
-## What is Vibe Kanban?
+## What is Task Copilot?
 
-Vibe Kanban is an **orchestration platform for AI coding agents** that helps developers plan, review, and safely execute AI-assisted coding tasks. Each task runs in an isolated git worktree, giving you complete control over your codebase whilst leveraging the power of AI assistants.
+Task Copilot is an **orchestration platform for AI coding agents** that helps developers plan, review, and safely execute AI-assisted coding tasks. Each task runs in an isolated git worktree, giving you complete control over your codebase whilst leveraging the power of AI assistants.
 
 <Frame>
-  <img src="/images/vibe-kanban-screenshot-overview.png"  />
+  <img src="/images/task-copilot-screenshot-overview.png"  />
 </Frame>
 
-## Why Vibe Kanban?
+## Why Task Copilot?
 
 <CardGroup cols={3}>
   <Card title="Safe AI Execution" icon="shield-check">
@@ -28,6 +28,17 @@ Vibe Kanban is an **orchestration platform for AI coding agents** that helps dev
   </Card>
 </CardGroup>
 
+## Integrations
+
+<CardGroup cols={2}>
+  <Card title="Jira Integration" icon="ticket" href="/jira-integration">
+    Sync tasks with Jira issues, create tickets, and track workflow transitions
+  </Card>
+
+  <Card title="Collaboration Tools" icon="comments">
+    Connect with Slack, Microsoft Teams, and Outlook for notifications and updates
+  </Card>
+</CardGroup>
 
 ## Need Help?
 
