### What was NOT changed (intentionally): - Package name references to `vibe-kanban-web-companion` (actual npm package name) - Import statements for `VibeKanbanWebCompanion` component (actual exported name from the package) - GitHub repository references to `vibe-kanban-web-companion` (actual repository name)
### Verification:
✅ TypeScript type check passes (`pnpm run check`)
✅ All imports compile correctly
✅ No breaking changes introduced

The changes are minimal and surgical, updating only user-facing text and branding while preserving all technical package references that need to remain unchanged.

--- a/frontend/src/i18n/locales/en/settings.json
+++ b/frontend/src/i18n/locales/en/settings.json
@@ -166,7 +166,7 @@
       },
       "privacy": {
         "title": "Privacy",
-        "description": "Help improve Vibe-Kanban by sharing anonymous usage data.",
+        "description": "Help improve Task Copilot by sharing anonymous usage data.",
         "telemetry": {
           "label": "Enable Telemetry",
           "helper": "Enables anonymous usage events tracking to help improve the application. No prompts or project information are collected."
