--- a/frontend/src/i18n/locales/ko/settings.json
+++ b/frontend/src/i18n/locales/ko/settings.json
@@ -371,6 +371,95 @@
         "discard": "취소",
         "confirmSwitch": "저장되지 않은 변경사항이 있습니다. 정말 프로젝트를 전환하시겠습니까? 변경사항이 손실됩니다."
       }
+    },
+    "platforms": {
+      "title": "플랫폼 통합",
+      "description": "외부 플랫폼 통합을 설정합니다.",
+      "loading": "플랫폼 설정 로드 중...",
+      "loadError": "플랫폼 구성을 로드하지 못했습니다.",
+      "save": {
+        "button": "플랫폼 설정 저장",
+        "success": "✓ 플랫폼 설정이 성공적으로 저장되었습니다!",
+        "error": "플랫폼 구성 저장 실패",
+        "unsavedChanges": "• 저장되지 않은 변경 사항이 있습니다",
+        "discard": "취소"
+      },
+      "jira": {
+        "title": "Jira 구성",
+        "description": "이슈 추적을 위한 Jira 통합을 설정합니다.",
+        "enabled": {
+          "label": "Jira 통합 활성화",
+          "helper": "Jira에 연결하여 이슈를 동기화하고 작업을 추적합니다."
+        },
+        "baseUrl": {
+          "label": "Jira 기본 URL",
+          "placeholder": "https://your-domain.atlassian.net",
+          "helper": "Jira 인스턴스 URL (예: https://your-domain.atlassian.net)"
+        },
+        "email": {
+          "label": "이메일",
+          "placeholder": "your.email@example.com",
+          "helper": "Jira 계정과 연결된 이메일 주소"
+        },
+        "apiToken": {
+          "label": "API 토큰",
+          "placeholder": "Jira API 토큰 입력",
+          "helper": "Jira 계정 설정에서 API 토큰을 생성하세요"
+        },
+        "ticketTemplate": {
+          "label": "티켓 템플릿",
+          "placeholder": "표준 티켓 템플릿 입력",
+          "helper": "Jira에서 표준 티켓을 생성하기 위한 템플릿. {title} 및 {description}과 같은 자리 표시자를 사용합니다."
+        },
+        "bugTemplate": {
+          "label": "버그 템플릿",
+          "placeholder": "버그 리포트 템플릿 입력",
+          "helper": "Jira에서 버그 리포트를 생성하기 위한 템플릿. {title} 및 {description}과 같은 자리 표시자를 사용합니다."
+        }
+      },
+      "slack": {
+        "title": "Slack 구성",
+        "description": "팀 커뮤니케이션 및 자동 응답을 위한 Slack 통합을 설정합니다.",
+        "enabled": {
+          "label": "Slack 통합 활성화",
+          "helper": "Slack에 연결하여 알림을 받고 자동 응답을 활성화합니다."
+        },
+        "botToken": {
+          "label": "봇 토큰",
+          "placeholder": "xoxb-your-bot-token",
+          "helper": "Slack 봇 사용자 OAuth 토큰. Slack 앱 설정에서 가져오세요."
+        },
+        "autoreply": {
+          "enabled": {
+            "label": "자동 응답 활성화",
+            "helper": "AI를 사용하여 Slack의 메시지에 자동으로 응답합니다."
+          },
+          "tone": {
+            "label": "응답 톤",
+            "placeholder": "예: 전문적, 친근한, 간결한",
+            "helper": "자동 응답의 톤을 설정합니다 (예: 전문적, 친근한, 캐주얼)."
+          },
+          "scope": {
+            "label": "자동 응답 범위"
+          },
+          "perMessage": {
+            "label": "메시지별 활성화",
+            "helper": "개별 메시지에 대해 자동 응답을 활성화/비활성화할 수 있습니다."
+          },
+          "perChat": {
+            "label": "채팅별 활성화",
+            "helper": "전체 대화에 대해 자동 응답을 활성화/비활성화할 수 있습니다."
+          },
+          "dmOnly": {
+            "label": "다이렉트 메시지만",
+            "helper": "다이렉트 메시지(DM)에만 자동 응답합니다."
+          },
+          "keepContext": {
+            "label": "대화 컨텍스트 유지",
+            "helper": "상황에 맞는 응답을 위해 대화의 이전 메시지를 기억합니다."
+          }
+        }
+      }
     }
   },
   "integrations": {
