--- a/frontend/src/i18n/locales/de/organization.json
+++ b/frontend/src/i18n/locales/de/organization.json
@@ -59,20 +59,20 @@
     "deleteError": "Failed to delete organization"
   },
   "loginRequired": {
-    "title": "로그인 필요",
-    "description": "조직 설정을 관리하려면 로그인해야 합니다.",
-    "action": "로그인"
+    "title": "Login Required",
+    "description": "You need to be logged in to manage organization settings.",
+    "action": "Login"
   },
   "confirmRemoveMember": "Are you sure you want to remove this member from the organization?",
   "sharedProjects": {
-    "title": "공유 프로젝트",
-    "description": "{{orgName}}의 원격 프로젝트와 로컬 프로젝트에 대한 연결",
-    "loading": "프로젝트 로딩 중...",
-    "noProjects": "이 조직에서 공유 프로젝트를 찾을 수 없습니다",
-    "notLinked": "연결되지 않음",
-    "linkedTo": "연결됨: {{projectName}}",
-    "linked": "연결됨",
-    "linkProject": "프로젝트 연결...",
-    "noAvailableProjects": "사용 가능한 프로젝트가 없습니다"
+    "title": "Shared Projects",
+    "description": "Remote projects in {{orgName}} and their links to local projects",
+    "loading": "Loading projects...",
+    "noProjects": "No shared projects found in this organization",
+    "notLinked": "Not linked",
+    "linkedTo": "Linked to: {{projectName}}",
+    "linked": "Linked",
+    "linkProject": "Link project...",
+    "noAvailableProjects": "No available projects"
   }
 }
