--- a/frontend/src/i18n/locales/en/settings.json
+++ b/frontend/src/i18n/locales/en/settings.json
@@ -7,6 +7,8 @@
         "generalDesc": "Theme, notifications, and preferences",
         "projects": "Projects",
         "projectsDesc": "Project scripts and configuration",
+        "portfolios": "Portfolios",
+        "portfoliosDesc": "Organize projects into portfolios",
         "platforms": "Platforms",
         "platformsDesc": "External platform integrations",
         "agents": "Agents",
