d-configuratio/vibe-kanban/frontend && npm run check     └ 9 lines...
Perfect! Let's check our final git diff to see all the changes:

✔  $ cd /private/var/folders/1m/wz7253z948xdkkn2bz5tctkm0000gn/T/task-copilot-dev/worktrees/6684-ad
    d-configuratio/vibe-kanban && git --no-pager diff --stat
    └ 11 lines...

Perfect! Let's also check if we need to create the migration file in the repository. Let me verify the migration file exists:

✔  $ ls -la /private/var/folders/1m/wz7253z948xdkkn2bz5tctkm0000gn/T/task-copilot-dev/worktrees/668
    4-add-configuratio/vibe-kanban/crates/db/migrations/ | grep "20260103000001"
    └ 2 lines...

Great! Let's check the full git status:

✔  $ cd /private/var/folders/1m/wz7253z948xdkkn2bz5tctkm0000gn/T/task-copilot-dev/worktrees/6684-ad
    d-configuratio/vibe-kanban && git --no-pager status
    └ 20 lines...

Excellent! Let's run one final check to ensure the Rust code still compiles:

✔  $ cd /private/var/folders/1m/wz7253z948xdkkn2bz5tctkm0000gn/T/task-copilot-dev/worktrees/6684-ad
    d-configuratio/vibe-kanban && cargo check --workspace 2>&1 | tail -20
    └ 4 lines...

Perfect! Everything compiles successfully. Let me create a summary of what we've accomplished:

## Summary

I've successfully added Confluence configuration to the settings, similar to how Jira is configured. Here's what was implemented:

### Changes Made:

1. **Backend Configuration (Rust)**:
   - Added `ConfluenceConfig` struct in `crates/services/src/services/config/versions/v9.rs` with fields:
     - `enabled`: Enable/disable Confluence integration
     - `api_token`: API token for authentication
     - `base_url`: Confluence instance URL
     - `email`: User email for authentication
     - `space_key`: Default space key for creating pages
     - `parent_page_id`: Optional parent page ID for new pages
   - Added `confluence` field to the main `Config` struct with default initialization

2. **Task Intent Enhancement**:
   - Updated `TaskIntent` enum in `crat

--- a/frontend/src/i18n/locales/de/settings.json
+++ b/frontend/src/i18n/locales/de/settings.json
@@ -461,6 +461,39 @@
             "helper": "Remember previous messages in the conversation for contextual responses."
           }
         }
+      },
+      "confluence": {
+        "title": "Confluence-Konfiguration",
+        "description": "Confluence-Integration für Dokumentation und Wissensmanagement konfigurieren.",
+        "enabled": {
+          "label": "Confluence-Integration aktivieren",
+          "helper": "Verbinden Sie sich mit Confluence, um Seiten zu erstellen und zu bearbeiten."
+        },
+        "baseUrl": {
+          "label": "Confluence Basis-URL",
+          "placeholder": "https://ihre-domain.atlassian.net/wiki",
+          "helper": "Ihre Confluence-Instanz-URL (z.B. https://ihre-domain.atlassian.net/wiki)"
+        },
+        "email": {
+          "label": "E-Mail",
+          "placeholder": "ihre.email@beispiel.de",
+          "helper": "Die E-Mail-Adresse, die Ihrem Confluence-Konto zugeordnet ist"
+        },
+        "apiToken": {
+          "label": "API-Token",
+          "placeholder": "Geben Sie Ihr Confluence API-Token ein",
+          "helper": "Generieren Sie ein API-Token in Ihren Atlassian-Kontoeinstellungen"
+        },
+        "spaceKey": {
+          "label": "Space-Schlüssel",
+          "placeholder": "MEINSPACE",
+          "helper": "Der Schlüssel des Confluence-Space, in dem Seiten erstellt werden"
+        },
+        "parentPageId": {
+          "label": "Übergeordnete Seiten-ID (Optional)",
+          "placeholder": "123456789",
+          "helper": "Standard-ID der übergeordneten Seite für neue Seiten. Leer lassen, um Seiten im Space-Root zu erstellen."
+        }
       }
     }
   },
