1. The component name from an external package (which we don't control) 2. A git internal reference
The rename is complete! Let me provide a summary of what was changed:

## Summary

I have successfully renamed all occurrences of "vibe-kanban" to "task-copilot" throughout the codebase. Here's what was changed:

### Configuration Files
- **package.json** (root) - Already had `task-copilot` name
- **npx-cli/package-lock.json** - Updated package name and bin references
- **docker-compose.dev.yml** - Updated all container names and secret keys
- **.gitignore** - Updated ignore patterns

### Rust Code
- **crates/server/src/main.rs** - Renamed `VibeKanbanError` → `TaskCopilotError`
- **crates/server/src/lib.rs** - Updated commented cloud deployment type
- **crates/server/src/bin/mcp_task_server.rs** - Updated port file name
- **crates/server/src/mcp/task_server.rs** - Updated MCP server name
- **crates/server/src/routes/task_attempts.rs** - Updated commit message format
- **crates/utils/src/path.rs** - Updated test paths
- **crates/utils/src/port_file.rs** - Updated temp directory and port file names
- **crates/executors/src/executors/acp/session.rs** - Updated config directory
- **crates/review/src/config.rs** - Updated config file path
- **crates/review/src/claude_session.rs** - Updated test paths
- **crates/remote/** - Updated user agent strings from `VibeKanbanRemote` → `TaskCopilotRemote`

### Frontend Code
- **frontend/src/components/panels/PreviewPanel.tsx** - Updated GitHub links
- **frontend/src/components/tasks/TaskDetails/preview/NoServerContent.tsx** - Updated GitHub links
- **remote-frontend/src/pages/ReviewPage.tsx** - Updated CLI command example

### Documentation
- **docs/docs.json** - Updated site name, navigation links, GitHub URLs, social links
- **docs/integrations/vibe-kanban-mcp-server.mdx** → **docs/integrations/task-copilot-mcp-server.mdx** (renamed file)
  - Updated all references to Task Copilot throughout
  - Updated MCP server configuration exa

--- a/docs/configuration-customisation/agent-configurations.mdx
+++ b/docs/configuration-customisation/agent-configurations.mdx
@@ -222,10 +222,10 @@ MCP (Model Context Protocol) servers are configured separately under **Settings 
 
 <CardGroup cols={2}>
 <Card title="MCP Server Configuration" icon="server" href="/integrations/mcp-server-configuration">
-  Configure MCP servers within Vibe Kanban for your coding agents
+  Configure MCP servers within Task Copilot for your coding agents
 </Card>
 
-<Card title="Vibe Kanban MCP Server" icon="plug" href="/integrations/vibe-kanban-mcp-server">
-  Connect external MCP clients to Vibe Kanban's MCP server
+<Card title="Task Copilot MCP Server" icon="plug" href="/integrations/task-copilot-mcp-server">
+  Connect external MCP clients to Task Copilot's MCP server
 </Card>
 </CardGroup>
