--- a/docs/core-features/creating-tasks.mdx
+++ b/docs/core-features/creating-tasks.mdx
@@ -63,7 +63,7 @@ Tasks can also be created programmatically using coding agents or MCP (Model Con
 - **Automated task generation** from project plans or requirements documents
 
 <Tip>
-For detailed setup instructions and examples, see the [Vibe Kanban MCP Server](/integrations/vibe-kanban-mcp-server) documentation.
+For detailed setup instructions and examples, see the [Task Copilot MCP Server](/integrations/task-copilot-mcp-server) documentation.
 </Tip>
 
 ### Example MCP Task Creation
