--- a/docs/integrations/mcp-server-configuration.mdx
+++ b/docs/integrations/mcp-server-configuration.mdx
@@ -1,16 +1,16 @@
 ---
 title: "Connecting MCP Servers"
-description: "Configure MCP (Model Context Protocol) servers to enhance your coding agents within Vibe Kanban with additional tools and capabilities."
+description: "Configure MCP (Model Context Protocol) servers to enhance your coding agents within Task Copilot with additional tools and capabilities."
 ---
 
 
 <Note>
-This page covers configuring MCP servers **within** Vibe Kanban for your coding agents. For connecting external MCP clients to Vibe Kanban's MCP server, see the [Vibe Kanban MCP Server](/integrations/vibe-kanban-mcp-server) guide.
+This page covers configuring MCP servers **within** Task Copilot for your coding agents. For connecting external MCP clients to Task Copilot's MCP server, see the [Task Copilot MCP Server](/integrations/task-copilot-mcp-server) guide.
 </Note>
 
 ## Overview
 
-MCP servers provide additional functionality to coding agents through standardized protocols. You can configure different MCP servers for each coding agent in Vibe Kanban, giving them access to specialized tools like browser automation, access to remote logs, error tracking via Sentry, or documentation from Notion.
+MCP servers provide additional functionality to coding agents through standardized protocols. You can configure different MCP servers for each coding agent in Task Copilot, giving them access to specialized tools like browser automation, access to remote logs, error tracking via Sentry, or documentation from Notion.
 
 ## Accessing MCP Server Configuration
 
