--- a/docs/integrations/vscode-extension.mdx
+++ b/docs/integrations/vscode-extension.mdx
@@ -1,9 +1,9 @@
 ---
 title: "VSCode Extension Integration"
-description: "Complete guide to using the Vibe Kanban extension with VSCode, Cursor, and Windsurf"
+description: "Complete guide to using the Task Copilot extension with VSCode, Cursor, and Windsurf"
 ---
 
-The Vibe Kanban VSCode extension brings task management directly into your IDE, providing seamless integration with logs, diffs, and process monitoring. This extension works with VSCode and popular forks including Cursor and Windsurf.
+The Task Copilot VSCode extension brings task management directly into your IDE, providing seamless integration with logs, diffs, and process monitoring. This extension works with VSCode and popular forks including Cursor and Windsurf.
 
 <video
   controls
@@ -17,21 +17,21 @@ The Vibe Kanban VSCode extension brings task management directly into your IDE, 
 <Tab title="VSCode">
 Install directly from the Visual Studio Code Marketplace:
 
-<Card title="VSCode Marketplace" icon="download" href="https://marketplace.visualstudio.com/items?itemName=bloop.vibe-kanban">
-  Install the official Vibe Kanban extension for VSCode
+<Card title="VSCode Marketplace" icon="download" href="https://marketplace.visualstudio.com/items?itemName=bloop.task-copilot">
+  Install the official Task Copilot extension for VSCode
 </Card>
 
 Alternatively, search for the extension ID in VSCode:
 1. Open VSCode
 2. Press `Ctrl+Shift+X` (Windows/Linux) or `Cmd+Shift+X` (macOS) to open Extensions
-3. Search for `@id:bloop.vibe-kanban`
+3. Search for `@id:bloop.task-copilot`
 4. Click **Install**
 </Tab>
 
 <Tab title="Cursor">
 For Cursor, use the Open VSX Registry:
 
-<Card title="Open VSX Registry" icon="download" href="https://open-vsx.org/extension/bloop/vibe-kanban">
+<Card title="Open VSX Registry" icon="download" href="https://open-vsx.org/extension/bloop/task-copilot">
   Install from Open VSX for Cursor compatibility
 </Card>
 
@@ -42,14 +42,14 @@ Since deeplinking from Open VSX doesn't work reliably in Cursor, the easiest ins
 **Installation Steps**:
 1. Open Cursor
 2. Open the Extensions panel
-3. Search for `@id:bloop.vibe-kanban`
+3. Search for `@id:bloop.task-copilot`
 4. Install the extension
 </Tab>
 
 <Tab title="Windsurf">
 For Windsurf, use the Open VSX Registry:
 
-<Card title="Open VSX Registry" icon="download" href="https://open-vsx.org/extension/bloop/vibe-kanban">
+<Card title="Open VSX Registry" icon="download" href="https://open-vsx.org/extension/bloop/task-copilot">
   Install from Open VSX for Windsurf compatibility
 </Card>
 
@@ -60,7 +60,7 @@ Since deeplinking from Open VSX doesn't work reliably in Windsurf, the easiest i
 **Installation Steps**:
 1. Open Windsurf
 2. Open the Extensions panel
-3. Search for `@id:bloop.vibe-kanban`
+3. Search for `@id:bloop.task-copilot`
 4. Install the extension
 </Tab>
 </Tabs>
@@ -132,10 +132,10 @@ The extension can only display task information when VSCode is opened in a direc
 
 ### Extension Not Loading
 
-**Problem**: The Vibe Kanban extension doesn't appear in your IDE.
+**Problem**: The Task Copilot extension doesn't appear in your IDE.
 
 **Solutions**:
-- Verify the extension is installed by searching `@id:bloop.vibe-kanban` in Extensions
+- Verify the extension is installed by searching `@id:bloop.task-copilot` in Extensions
 - Restart your IDE after installation
 - Check that you're using a compatible IDE version
 - For Cursor/Windsurf users, ensure you installed from Open VSX Registry
@@ -143,7 +143,7 @@ The extension can only display task information when VSCode is opened in a direc
 ## Best Practices
 
 <Tip>
-**Workflow Optimization**: Always start tasks from the Vibe Kanban web interface before opening in your IDE to ensure proper context and worktree setup.
+**Workflow Optimization**: Always start tasks from the Task Copilot web interface before opening in your IDE to ensure proper context and worktree setup.
 </Tip>
 
 <Tip>
@@ -159,5 +159,5 @@ The extension can only display task information when VSCode is opened in a direc
 | **Windsurf** | ✅ Fully Supported | Open VSX Registry |
 
 <Info>
-The extension is designed to work with any VSCode-compatible editor. If you're using a different VSCode fork, try installing from Open VSX Registry using the extension ID `bloop.vibe-kanban`.
+The extension is designed to work with any VSCode-compatible editor. If you're using a different VSCode fork, try installing from Open VSX Registry using the extension ID `bloop.task-copilot`.
 </Info>
