--- a/docs/agents/amp.mdx
+++ b/docs/agents/amp.mdx
@@ -19,7 +19,7 @@ icon: https://www.vibekanban.com/images/logos/amp-logo.svg
   Once authenticated, launch Vibe Kanban:
 
   ```bash
-  npx vibe-kanban
+  npx task-copilot
   ```
 
   You can now select Amp when creating task attempts.
