--- a/docs/agents/cursor-cli.mdx
+++ b/docs/agents/cursor-cli.mdx
@@ -21,7 +21,7 @@ icon: https://www.vibekanban.com/images/logos/cursor-logo-light.png
   Once authenticated, launch Vibe Kanban:
 
   ```bash
-  npx vibe-kanban
+  npx task-copilot
   ```
 
   You can now select Cursor Agent CLI when creating task attempts.
