--- a/docs/agents/gemini-cli.mdx
+++ b/docs/agents/gemini-cli.mdx
@@ -19,7 +19,7 @@ icon: https://www.vibekanban.com/images/logos/gemini-logo.svg
   Once authenticated, launch Vibe Kanban:
 
   ```bash
-  npx vibe-kanban
+  npx task-copilot
   ```
 
   You can now select Gemini CLI when creating task attempts.
