--- a/docs/agents/openai-codex.mdx
+++ b/docs/agents/openai-codex.mdx
@@ -21,7 +21,7 @@ icon: https://www.vibekanban.com/images/logos/openai-logo.svg
   Once authenticated, launch Vibe Kanban:
 
   ```bash
-  npx vibe-kanban
+  npx task-copilot
   ```
 
   You can now select OpenAI Codex when creating task attempts.
