--- a/docs/agents/qwen-code.mdx
+++ b/docs/agents/qwen-code.mdx
@@ -19,7 +19,7 @@ icon: https://www.vibekanban.com/images/logos/qwen-logo.png#"
   Once authenticated, launch Vibe Kanban:
 
   ```bash
-  npx vibe-kanban
+  npx task-copilot
   ```
 
   You can now select Qwen Code when creating task attempts.
