--- a/docs/core-features/testing-your-application.mdx
+++ b/docs/core-features/testing-your-application.mdx
@@ -49,7 +49,7 @@ Preview Mode provides an embedded browser experience within Vibe Kanban, allowin
   For precise component selection, install the `vibe-kanban-web-companion` package in your application.
 
   <Info>
-  **Recommended**: Use the "Install companion automatically" button in the Preview tab to have Vibe Kanban create a task that installs and configures the companion for you.
+  **Recommended**: Use the "Install companion automatically" button in the Preview tab to have Task Copilot create a task that installs and configures the companion for you.
   
   <Frame>
   <img src="/images/preview-mode-install-companion-button.png" alt="Install companion automatically button in Preview tab" />
