--- a/frontend/src/i18n/locales/es/projects.json
+++ b/frontend/src/i18n/locales/es/projects.json
@@ -45,6 +45,7 @@
     }
   },
   "unlinkFromOrganization": "Desvincular de Proyecto Remoto",
+  "linkToPortfolio": "Enlace al Portafolio",
   "projectNotFound": "El proyecto que buscas no existe o ha sido eliminado.",
   "viewProject": "Ver Proyecto",
   "openInIDE": "Abrir en IDE",
