--- a/frontend/src/i18n/locales/en/settings.json
+++ b/frontend/src/i18n/locales/en/settings.json
@@ -223,12 +223,7 @@
       },
       "safety": {
         "title": "Safety & Disclaimers",
-        "description": "Reset acknowledgments for safety warnings and onboarding.",
-        "disclaimer": {
-          "title": "Disclaimer Acknowledgment",
-          "description": "Reset the safety disclaimer.",
-          "button": "Reset"
-        },
+        "description": "Reset acknowledgments for onboarding.",
         "onboarding": {
           "title": "Onboarding",
           "description": "Reset the onboarding flow.",
