--- a/frontend/src/i18n/locales/es/settings.json
+++ b/frontend/src/i18n/locales/es/settings.json
@@ -219,12 +219,7 @@
       },
       "safety": {
         "title": "Avisos legales y de seguridad",
-        "description": "Reinicia las confirmaciones de seguridad y de introducción.",
-        "disclaimer": {
-          "title": "Confirmación de Descargo",
-          "description": "Restablecer el aviso de seguridad.",
-          "button": "Restablecer"
-        },
+        "description": "Reinicia las confirmaciones de introducción.",
         "onboarding": {
           "title": "Introducción",
           "description": "Restablece el flujo de Introducción.",
